--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,18 +1,22 @@
 .search_container {
   width: 100%;
   position: fixed;
-  top: 25px;
+  top: 0;
   display: flex;
   justify-content: center;
+  z-index: 100;
+  background-color: rgb(76, 117, 250);
 }
 .search_container input {
+  margin-top: 20px;
+  margin-bottom: 25px;
   outline: none;
   border: 1px solid rgb(206, 200, 200);
-
   border-radius: 5px;
   width: 50%;
   padding: 15px;
   font-size: medium;
+  color: aliceblue;
   background-color: inherit;
 }
 
@@ -24,8 +28,12 @@
   padding: 0;
   margin: 0;
   height: 15px;
-  top: 15px;
+  top: 35px;
   left: -30px;
   cursor: pointer;
   color: whitesmoke;
+}
+.search_container button:hover {
+  color: rgb(204, 204, 169);
+  transition: 0.8s ease-in-out;
 }
